data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1339.wast
;; 10. **Validate `if` with `br_table` Incorrect Targets**:    - Implement an `if` containing a `br_table` with multiple incorrect target entries.    - Evaluate if incorrect targets are correctly trapped and managed across different implementations.    - Ensures `br_table` usage within `if` blocks resolves correctly in dynamic branch resolution scenarios.

(assert_invalid
  (module (func $type-if-br_table-invalid-targets (result i32)
    (i32.const 1)
    (if (result i32)
      (then
        (block (br_table 1 2 (i32.const 0)))
        (i32.const 0)
      )
      (else
        (br_table 0 (block (i32.const 1)))
      )
    )
  ))
  "type mismatch"
)